@@ -15,6 +15,8 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
+#if HAVE_TOMLPLUSPLUS
+
 #include "synergy/Config.h"
 
 #include <filesystem>
@@ -46,3 +48,5 @@ TEST(ConfigTests, LoadConfigFile) {
 
   std::filesystem::remove(kTestFilename);
 }
+
+#endif // HAVE_TOMLPLUSPLUS
